# file-retriever

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: unit-tests.yaml
file_retriever/: __init__.py  _clients.py  connect.py  errors.py  file.py  utils.py
tests/: conftest.py  test_clients.py  test_connect.py  test_file.py  test_file_retriever.py  test_file_retriever_cli.py  test_utils.py
