[project]
name = "file-retriever"
version = "0.3.0"
description = "BookOps file retriever for FTP/SFTP servers"
authors = [{name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko (>=3.4.0, <3.5.0)",
    "types-paramiko (>=3.5.0.20240928, <3.6.0)"
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",    
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20241230"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "livetest: mark a test as hitting a live ftp/sftp server",
]
addopts = '-m "not livetest" --cov=file_retriever/'


[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]
branch = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["F", "E", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ANN"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
